layout issues

--- a/_demo_ko_thru_panel/css/demo.css
+++ b/_demo_ko_thru_panel/css/demo.css
@@ -30,12 +30,19 @@ a:visited
 .MainContainer
 {
     position:absolute;
-    top:10px;
-    left:10px;
-    right:10px;
-    bottom:10px;
+    top:0px;
+    left:0px;
+    right:0px;
+    bottom:0px;
     min-width:calc(800px);
-    border: solid 1px rgba(255,0,0,1);
+    border: solid 0px rgba(255,0,0,1);
+    padding:0px;
+}
+.MainTable
+{
+    width:calc(100%);
+    padding:0;
+    margin:0;
 }
 .Column
 {
@@ -43,14 +50,16 @@ a:visited
     display:inline-block;
     padding:10px;
     height:calc(100%);
-    width:calc(33%);
     overflow:auto;
+    vertical-align:top;
 }
 .TwoHun
 {
     min-width:calc(200px);
+    max-width:calc(200px);
 }
 .FourHun
 {
-    min-width:calc(400px);
+    min-width:calc(100% - 400px);
+    max-width:calc(100% - 400px);
 }
